<resources>
    <string name="app_name">CS 125 Lecture Feedback</string>
    <string name="icon_label">CS 125</string>
    <string name="title_activity_submit">CS 125 Lecture Feedback</string> <!-- used as launcher icon label-->
    <string name="title_activity_history">History</string>
    <string name="title_activity_about">About</string>

    <string name="action_history_clear">Clear</string>

    <string name="submit_et_hint_userNetID">Your NetID</string>
    <string name="submit_et_hint_partnerNetID">Partner NetID</string>
    <string name="submit_tv_ratingLabel">Rating</string>
    <string name="submit_et_hint_feedbackGood">Topics I feel good about (optional)</string>
    <string name="submit_et_hint_feedbackStruggling">Topics I am struggling with (optional)</string>
    <string name="submit_btn_submit">Submit</string>

    <string name="submit_toast_userNetID_blank">NetID must be entered</string>
    <string name="submit_toast_partnerNetID_blank">Partner NetID must be entered</string>
    <string name="submit_toast_netID_invalid">NetIDs must only contain a&#8211;z, 0&#8211;9, &#8211;</string>
    <string name="submit_toast_network_error">Network Error</string>
    <string name="submit_toast_server_error">Server Error</string>

    <string name="about_byShreyasPatil">by &lt;b&gt;Shreyas Patil&lt;/b&gt;</string>
    <string name="about_emailAddress">s@shreyas208.com</string>
    <string name="about_forCS125">for &lt;b&gt;CS125: Intro to Computer Science&lt;/b&gt;</string>
    <string name="about_atUIUC">at the &lt;b&gt;University of Illinois at Urbana-Champaign&lt;/b&gt;</string>
    <string name="about_version">Version 1.1 (2015&#8211;10&#8211;19)</string> <!-- TODO update on version change -->

    <string name="shared_pref_key_netid">shared_pref_netid</string>
</resources>