<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SubmitActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@+id/etPartnerNetID"
            android:imeOptions="actionNext"
            android:hint="@string/submit_et_hint_userNetID"
            android:id="@+id/etUserNetID" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@+id/etFeedbackGood"
            android:imeOptions="actionNext"
            android:hint="@string/submit_et_hint_partnerNetID"
            android:id="@+id/etPartnerNetID" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:text="@string/submit_tv_ratingLabel"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:orientation="horizontal">

            <SeekBar
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/element_bottom_margin"
                android:progress="4"
                android:id="@+id/sbRating"/>

            <TextView
                android:layout_width="30dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tvRating"/>

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:gravity="top"
            android:nextFocusDown="@+id/etFeedbackStruggling"
            android:hint="@string/submit_et_hint_feedbackGood"
            android:id="@+id/etFeedbackGood"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_bottom_margin"
            android:gravity="top"
            android:hint="@string/submit_et_hint_feedbackStruggling"
            android:id="@+id/etFeedbackStruggling"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="processSubmission"
            android:text="@string/submit_btn_submit"
            android:id="@+id/btnSubmit" />

    </LinearLayout>

</ScrollView>
