<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shreyas208.cs125lecture.AboutActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <TextView android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/about_tvForCS125"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/about_tvAtUIUC"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/about_tvByShreyasPatil"/>
    <TextView android:text="@string/about_emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:autoLink="email"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <TextView android:text="@string/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="18sp"/>

</LinearLayout>
